issuer.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
spec: {}
status: {}
