ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: gaming-grids
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-staging"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - leaguetest.mobyplaygrounds.com
      secretName: leaguetest-mobyplaygrounds-tls
  rules:
    - host: leaguetest.mobyplaygrounds.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gaming-grids-client
                port:
                  number: 80
